--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,9 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+    encoders:
+        App\Entity\User: bcrypt
     providers:
         in_memory: { memory: ~ }
     firewalls:
